# ore

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake
.github/workflows/: main.yml
cmake/Modules/: FindGLEW.cmake
examples/: CMakeLists.txt  barrel.cpp  resource_path.h.in
examples/Barrel/: barrel.cpp
examples/barrel/: barrel.cpp
examples/basic/: CMakeLists.txt  basic.cpp  basic.frag  basic.vert  basic_render_system.h  basic_render_system.hpp  basic_shader.cpp  basic_shader.h  basic_shader.hpp  resource_path.hpp.in
include/ore/: Entity.hpp  EntityManager.hpp  Image.hpp  Loader.hpp  Material.hpp  Model.hpp  base_dir.h.in  entity.h  entity.hpp  entity_manager.h  entity_manager.hpp  image.h  image.hpp  loader.h  loader.hpp  material.h  material.hpp  model.h  model.hpp  window.h
include/ore/components/: CameraComponent.hpp  Component.hpp  LightComponent.hpp  ModelComponent.hpp  Position3DComponent.hpp  camera_component.h  camera_component.hpp  component.h  component.hpp  light_component.h  light_component.hpp  model_component.h  model_component.hpp  position_3d_component.h  position_3d_component.hpp
include/ore/lib/: tiny_obj_loader.h
include/ore/shaders/: EntityShader.hpp  ShaderProgram.hpp  entity_shader.h  entity_shader.hpp  shader_program.h  shader_program.hpp
include/ore/systems/: CameraSystem.hpp  EntityRenderSystem.hpp  System.hpp  camera_system.h  camera_system.hpp  entity_render_system.h  entity_render_system.hpp  system.h  system.hpp
include/ore/util/: vec_print.h
src/: entity.cpp  image.cpp  loader.cpp  material.cpp  model.cpp  window.cpp
src/components/: component.cpp
src/ore/: Entity.cpp  Image.cpp  Loader.cpp  Material.cpp  Model.cpp  System.cpp
src/ore/components/: CameraComponent.cpp  Component.cpp
src/ore/lib/: stb_image.cpp  tiny_obj_loader.cpp
src/ore/shaders/: EntityShader.cpp  ShaderProgram.cpp  entity.vert
src/ore/systems/: CameraSystem.cpp  EntityRenderSystem.cpp
src/shaders/: entity.frag  entity.vert  entity_shader.cpp  shader_program.cpp
src/systems/: camera_system.cpp
test/: EntityTests.cpp  Main.cpp  entity_tests.cpp
